# WordHuntSolver

./: CMakeLists.txt  LICENSE  README.md  main.cpp  notes.txt  simple_server  simple_server.c  solver  solver.cpp  solver.h  solver2  solver2.cpp
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/client/: package-lock.json  package.json
client/client/src/app/: page.tsx
client/components/: Grid.tsx  PathBoard.tsx  PathBoardCard.tsx
server/: CMakeLists.txt  main.cpp  server.cpp  solver.cpp  solver.h  util.cpp  util.h
